tdf#120629 doc {im,ex}port: accept known numberingTypes

I cross-checked with what was imported via DOCX
and took inspiration from tdf#141341 to consolidate
these two nearly-identical functions that otherwise
would need to be kept in sync (and never are)..

Change-Id: I7e021d7c9d68597da5b0ce1311ae243fc003e4f7